// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CookbookListItem Snapshot Test 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#222",
      "borderRadius": 10,
      "borderStyle": "solid",
      "borderWidth": 2,
      "display": "flex",
      "flexDirection": "row",
      "height": 120,
      "marginBottom": 12,
      "marginLeft": 12,
      "marginRight": 12,
      "marginTop": 12,
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 12,
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../resources/platzhalter.png",
      }
    }
    style={
      Array [
        Object {
          "backgroundColor": "#68a0cf",
          "borderColor": "#fff",
          "borderRadius": 10,
          "borderWidth": 1,
          "height": 100,
          "paddingBottom": 20,
          "paddingTop": 20,
          "width": 100,
        },
      ]
    }
  />
  <Text
    ellipsizeMode="middle"
    numberOfLines={2}
    style={
      Array [
        Object {
          "fontSize": 30,
          "marginLeft": 12,
          "maxWidth": "70%",
          "textAlign": "center",
        },
      ]
    }
  >
    test-title
  </Text>
</View>
`;

exports[`CookbookListItem Snapshot with Thumbnail+Recipe 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#222",
      "borderRadius": 10,
      "borderStyle": "solid",
      "borderWidth": 2,
      "display": "flex",
      "flexDirection": "row",
      "height": 120,
      "marginBottom": 12,
      "marginLeft": 12,
      "marginRight": 12,
      "marginTop": 12,
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 12,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "test-uri",
      }
    }
    style={
      Array [
        Object {
          "backgroundColor": "#68a0cf",
          "borderColor": "#fff",
          "borderRadius": 10,
          "borderWidth": 1,
          "height": 100,
          "paddingBottom": 20,
          "paddingTop": 20,
          "width": 100,
        },
      ]
    }
  />
  <Text
    ellipsizeMode="middle"
    numberOfLines={2}
    style={
      Array [
        Object {
          "fontSize": 30,
          "marginLeft": 12,
          "maxWidth": "70%",
          "textAlign": "center",
        },
      ]
    }
  >
    test-title
  </Text>
</View>
`;
